--- a/src/components/UI/MyLogin/MyLogIn.module.css
+++ b/src/components/UI/MyLogin/MyLogIn.module.css
@@ -21,3 +21,10 @@
 .accauntName:hover{
     color: rgba(255,255,255, 0.8);
 }
+
+.dropdown_toggle:active{
+    background: rgba(255,255,255,0.25);
+}
+.dropdown_toggle_out:active{
+    background: rgba(255, 0, 0, 0.4);
+}
