--- a/src/components/UI/OneQuestion/OneQuestion.module.css
+++ b/src/components/UI/OneQuestion/OneQuestion.module.css
@@ -1,3 +1,34 @@
+/*.question {*/
+/*    border: solid;*/
+/*    border-radius: 15px;*/
+/*    background-color: #212529;*/
+/*    border-width: 2px;*/
+/*    !*min-height: 300px;*!*/
+/*    margin: 15px;*/
+/*    !*display: flex;*!*/
+/*    !*position: relative;*!*/
+/*}*/
+
+/*.answer {*/
+/*    !*bottom: 0;*!*/
+/*    height: 67.6px;*/
+/*    width: 100%;*/
+/*    display: flex;*/
+/*    justify-content: end;*/
+/*    !*position: absolute;*!*/
+/*}*/
+
+/*.answer_btn {*/
+/*    margin: 15px;*/
+/*}*/
+
+/*.question_text{*/
+/*    height: calc(100% - 67px);*/
+/*    min-height: 150px;*/
+/*    margin: 15px;*/
+/*    width: 100%;*/
+/*    color: white;*/
+/*}*/
 .question {
     border: solid;
     border-radius: 15px;
@@ -9,22 +40,18 @@
     /*position: relative;*/
 }
 
-.answer {
+.answer_text {
     /*bottom: 0;*/
-    height: 67.6px;
+    min-height: 50px;
     width: 100%;
-    display: flex;
-    justify-content: end;
+    margin: 15px;
+    color: white;
     /*position: absolute;*/
 }
 
-.answer_btn {
-    margin: 15px;
-}
 
 .question_text{
-    height: calc(100% - 67px);
-    min-height: 150px;
+    min-height: 50px;
     margin: 15px;
     width: 100%;
     color: white;
