--- a/src/components/UI/MyLogin/MyLogIn.module.css
+++ b/src/components/UI/MyLogin/MyLogIn.module.css
@@ -26,5 +26,13 @@
     background: rgba(255,255,255,0.25);
 }
 .dropdown_toggle_out:active{
-    background: rgba(255, 0, 0, 0.4);
+    background-color: rgba(255, 0, 0, 0.4);
+}
+
+.dropdown_toggle_out{
+    background-color: #0c4128;
+}
+
+.dropdown{
+
 }
