--- a/src/components/UI/Search/Search.module.scss
+++ b/src/components/UI/Search/Search.module.scss
@@ -1,6 +1,10 @@
-.search_input{
-    width: 60%;
-    /*height: 37.6px;*/
+//.search_input{
+//    width: 60%;
+//    /*height: 37.6px;*/
+//}
+
+.search_btn{
+    margin: 0 15px;
 }
 
 .search_input:focus {
