--- a/src/components/UI/OneQuestionsForAnswer/OneQuestionsForAnswer.module.css
+++ b/src/components/UI/OneQuestionsForAnswer/OneQuestionsForAnswer.module.css
@@ -1,8 +1,9 @@
 .answer {
     border: solid;
     border-radius: 15px;
-    background-color: #212529;
-    border-width: 2px;
+    background-color: #cfe2ff;
+    border-width: 1px;
+    border-color: #b6d4fe;
     /*min-height: 300px;*/
     margin: 15px;
     /*display: flex;*/
@@ -27,7 +28,7 @@
     min-height: 50px;
     margin: 15px;
     width: 100%;
-    color: white;
+    /*color: white;*/
 }
 
 .answer_text{
@@ -35,12 +36,12 @@
     min-height: 50px;
     margin: 15px;
     width: 100%;
-    color: white;
+    /*color: white;*/
 }
 
 .inputInfo:focus {
-    box-shadow: none;
-    border-color: black;
+    box-shadow: none !important;
+    border-color: black !important;
 }
 
 .ask {
