--- a/src/components/UI/Search/Search.module.scss
+++ b/src/components/UI/Search/Search.module.scss
@@ -8,8 +8,8 @@
 }
 
 .search_input:focus {
-    box-shadow: none;
-    border-color: black;
+    box-shadow: none !important;
+    border-color: black !important;
 }
 
 .search{
