--- a/src/components/UI/Ask/Ask.module.css
+++ b/src/components/UI/Ask/Ask.module.css
@@ -1,6 +1,6 @@
 .inputInfo:focus {
-    box-shadow: none;
-    border-color: black;
+    box-shadow: none !important;
+    border-color: black !important;
 }
 
 .ask {
