--- a/src/components/UI/MySignUp/MySignUp.module.scss
+++ b/src/components/UI/MySignUp/MySignUp.module.scss
@@ -7,8 +7,8 @@
 }
 
 .inputInfo:focus{
-    box-shadow: none;
-    border-color: black;
+    box-shadow: none !important;
+    border-color: black !important;
 }
 
 .accauntName{
