--- a/src/components/UI/Questions/Questions.module.scss
+++ b/src/components/UI/Questions/Questions.module.scss
@@ -1,10 +1,11 @@
-.questions {
-  display: flex;
-  height: 500px;
-  align-items: center;
-  justify-content: center;
-  overflow-y: hidden;
-}
+//.questions {
+//  display: flex;
+//  //height: 500px;
+//  align-items: center;
+//  flex-direction: column;
+//  justify-content: center;
+//  //overflow-y: hidden;
+//}
 
 .pagination_container {
   display: flex;
