--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,9 +1,13 @@
 
 $primary: #084298;
-$info: #37aa85;
+$info: #00c40c;
+//#37aa85
 $secondary: #cfe2ff;
+$warning: #e3e3e3;
 //$card-border-color: #b6d4fe;
-
+.btn_white{
+    color: #ffffff !important;
+}
 
 
 
