почти все опять?

--- a/src/components/UI/Answers/Answers.module.scss
+++ b/src/components/UI/Answers/Answers.module.scss
@@ -2,10 +2,7 @@
 }
 
 .answers{
-    display: flex;
-    height: 500px;
-    align-items: center;
-    justify-content: center;
+    margin: 15px;
 }
 
 .pagination_container {
