--- a/src/components/UI/OneQuestionsForAnswer/OneQuestionsForAnswer.module.css
+++ b/src/components/UI/OneQuestionsForAnswer/OneQuestionsForAnswer.module.css
@@ -1,9 +1,24 @@
-.answer {
+.answer_done {
     border: solid;
     border-radius: 15px;
     background-color: #cfe2ff;
     border-width: 1px;
     border-color: #b6d4fe;
+    /*min-height: 300px;*/
+    margin: 15px;
+    /*display: flex;*/
+    /*position: relative;*/
+}
+
+
+.answer {
+    /*width: 100%;*/
+    /*max-width: 1200px;*/
+    border: solid;
+    border-radius: 15px;
+    background-color: #f1f1f1;
+    border-width: 1px;
+    border-color: rgba(0, 0, 0, 0.1);
     /*min-height: 300px;*/
     margin: 15px;
     /*display: flex;*/
