--- a/src/components/UI/MainPageQuestions/MainPageQuestions.module.scss
+++ b/src/components/UI/MainPageQuestions/MainPageQuestions.module.scss
@@ -1,6 +1,6 @@
 .questions {
   //display: flex;
-  //height: 500px;
+  ////height: 500px;
   //align-items: center;
   //flex-direction: column;
   //justify-content: center;
